# CS360

hw0/: README.md  intro.rkt
hw0/compiled/drracket/errortrace/: intro_rkt.dep  intro_rkt.zo  tests_rkt.dep  tests_rkt.zo
hw1/: README.md  scheme.rkt  scheme.rkt~  tests.rkt
hw1/compiled/drracket/errortrace/: scheme_rkt.dep  scheme_rkt.zo  tests_rkt.dep  tests_rkt.zo
hw2/: README.md  more-scheme.rkt  more-scheme.rkt~  run-tests-gui.rkt  tests.rkt
hw2/compiled/drracket/errortrace/: more-scheme_rkt.dep  more-scheme_rkt.zo  tests_rkt.dep  tests_rkt.zo
hw3/: HaskellIntro.hs  README.md  haskell-intro.cabal
hw3/test/: HaskellIntroSpec.hs
hw4/: Art.hs  GenArt.hs  ImageUtils.hs  README.md  art.cabal
hw4/test/: ArtSpec.hs  TestUtil.hs
p1p1/: README.md  mceval-tests.rkt  mceval.rkt  mceval.rkt~  tests.rkt
p1p1/compiled/drracket/errortrace/: mceval-tests_rkt.dep  mceval-tests_rkt.zo  mceval_rkt.dep  mceval_rkt.zo  tests_rkt.dep  tests_rkt.zo
p1p2/: README.md  lazy-mceval.rkt  lazy-mceval.rkt~  mceval-tests.rkt  mceval.rkt  mceval.rkt~  tests.rkt
p1p2/compiled/drracket/errortrace/: lazy-mceval-tests_rkt.dep  lazy-mceval-tests_rkt.zo  lazy-mceval_rkt.dep  lazy-mceval_rkt.zo  mceval-tests_rkt.dep  mceval-tests_rkt.zo  mceval_rkt.dep  mceval_rkt.zo  tests_rkt.dep  tests_rkt.zo
p2/: README.md  intset.cabal
p2/src/: IntSet.hs
p2/test/: IntSetPropertySpec.hs  IntSetUnitSpec.hs  Main.hs
p3/: Makefile  README.md  while.cabal
p3/src/: BigMain.hs  Parsing.hs
p3/src/While/: Big.hs  Env.hs  Monad.hs  ParMonad.hs  Parser.hs  Small.hs  Syntax.hs
p3/test/: Spec.hs
