name:          intset
version:       0.1
cabal-version: >= 1.10

build-type: Simple

library
  build-depends:
    base >= 4 && < 5

  exposed-modules:
    IntSet

  hs-source-dirs: src

  default-language: Haskell98

  ghc-options: -Wall

test-suite spec
  type:    exitcode-stdio-1.0
  main-is: Main.hs

  hs-source-dirs: test

  other-modules:
    IntSetUnitSpec
    IntSetPropertySpec
    Spec

  build-depends:
    intset,
    base       >= 4    && < 5,
    hspec      >= 2.10 && < 2.11,
    QuickCheck >= 2.14 && < 2.15

  default-language: Haskell98
